--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,33 @@ on:
     branches:
 
 jobs:
+  test:
+    if: "!contains(toJson(github.event.commits), '[skip ci]')"
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node-version: [10.13.0, 10.x, 12.13.0, 12.x, 14.15.0, 14.x]
+        ts-version: [4.1.2]
+        redis-version: [4, 5, 6]
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }} & Typescript ${{ matrix.ts-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: |
+        yarn install
+        yarn add typescript@${{ matrix.ts-version }} --dev
+    - run: yarn test ${{ matrix.redis-version }}
+    - name: Coverage
+      uses: codecov/codecov-action@v1
+      if: matrix.node-version == '12.13.0' && matrix.ts-version == '4.1.2' && github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-latest'
   publish:
     if: "!contains(toJson(github.event.commits), '[skip ci]')"
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
