--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qoq-redis",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "lib/index.js",
   "module": "es/index.js",
   "typings": "types/index.d.ts",
@@ -8,7 +8,8 @@
   "author": "原罪 <531362022@qq.com>",
   "license": "MIT",
   "scripts": {
-    "prepublishOnly": "sh ./prepublish.sh"
+    "test": "sh ./scripts/test.sh",
+    "prepublishOnly": "sh ./scripts/prepublish.sh"
   },
   "engines": {
     "node": ">=10.13.0"
@@ -25,12 +26,11 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.25",
-    "@types/supertest": "^2.0.10",
     "chai": "^4.3.0",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
-    "qoq": "^0.0.12",
-    "supertest": "^6.1.3",
+    "qoq": "^0.0.15",
+    "sleep-promise": "^9.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
