--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     - run: yarn test ${{ matrix.redis-version }}
     - name: Coverage
       uses: codecov/codecov-action@v1
-      if: matrix.node-version == '12.13.0' && matrix.ts-version == '4.1.2' && github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-latest'
+      if: matrix.node-version == '12.13.0' && matrix.ts-version == '4.1.2' && matrix.redis-version == '4' && github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-latest'
   publish:
     if: "!contains(toJson(github.event.commits), '[skip ci]')"
     needs: test
