--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     if: "!contains(toJson(github.event.commits), '[skip ci]')"
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         node-version: [10.13.0, 10.x, 12.13.0, 12.x, 14.15.0, 14.x]
         ts-version: [4.1.2]
         redis-version: [4, 5, 6]
