--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qoq-redis",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "lib/index.js",
   "module": "es/index.js",
   "typings": "types/index.d.ts",
@@ -15,24 +15,24 @@
     "node": ">=10.13.0"
   },
   "peerDependencies": {
-    "qoq": ">=0.0.8"
+    "qoq": ">=0.1.0"
   },
   "dependencies": {
-    "@types/ioredis": "4.19.3",
-    "ioredis": "4.22.0",
-    "tslib": "2.1.0"
+    "@types/ioredis": "^4.19.3",
+    "ioredis": "^4.22.0",
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.25",
-    "chai": "^4.3.0",
-    "mocha": "^8.2.1",
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^14.14.37",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
     "nyc": "^15.1.0",
-    "qoq": "^0.0.15",
+    "qoq": "^0.0.25",
     "sleep-promise": "^9.1.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   },
   "files": [
     "package.json",
