--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
   "name": "qoq-redis",
   "version": "0.0.7",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "typings": "types/index.d.ts",
+  "main": "./lib/index.js",
+  "module": "./es/index.js",
   "repository": "git@github.com:qoq-ts/qoq-redis.git",
   "author": "原罪 <531362022@qq.com>",
   "license": "MIT",
+  "exports": {
+    ".": {
+      "require": "./lib/index.js",
+      "import": "./es/index.js"
+    },
+    "./": "./"
+  },
   "scripts": {
     "test": "sh ./scripts/test.sh",
     "prepublishOnly": "sh ./scripts/prepublish.sh"
   },
   "engines": {
-    "node": ">=10.13.0"
+    "node": "^14.15.0"
   },
   "peerDependencies": {
     "qoq": ">=0.1.0"
   },
   "dependencies": {
-    "@types/ioredis": "^4.22.3",
-    "ioredis": "^4.26.0",
+    "@types/ioredis": "^4.26.4",
+    "ioredis": "^4.27.2",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.16",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.37",
-    "chai": "^4.3.4",
-    "mocha": "^8.3.2",
-    "nyc": "^15.1.0",
-    "qoq": "^0.0.30",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.3.0",
+    "qoq": "^0.0.55",
     "sleep-promise": "^9.1.0",
-    "ts-node": "^9.1.1",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "files": [
     "package.json",
     "es",
     "lib",
-    "types",
     "README.md",
     "LICENSE"
   ]
