--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
-    "module": "CommonJS",
+    "target": "ES2020",
+    "module": "ES2020",
     "allowJs": false,
     "declaration": true,
-    "declarationDir": "./build/types",
     "outDir": "./build",
     "rootDir": ".",
     "importHelpers": true,
@@ -25,7 +24,6 @@
     "noUncheckedIndexedAccess": true,
 
     "moduleResolution": "node",
-    "typeRoots": ["./node_modules/@types/", "./typing/"],
     "esModuleInterop": true,
     "resolveJsonModule": true,
 
