--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node-version: [14.15.0, 14.x]
-        ts-version: [4.1.2]
+        ts-version: [4.1.2, 4.2.x]
         redis-version: [4, 5, 6]
 
     runs-on: ${{ matrix.os }}
