--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qoq-redis",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "main": "./lib/index.js",
   "module": "./es/index.js",
   "repository": "git@github.com:qoq-ts/qoq-redis.git",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "test": "sh ./scripts/test.sh",
-    "prepublishOnly": "sh ./scripts/prepublish.sh"
+    "prepublishOnly": "ts-prepublish"
   },
   "engines": {
     "node": "^14.15.0"
@@ -36,6 +36,7 @@
     "qoq": "^0.0.55",
     "sleep-promise": "^9.1.0",
     "ts-jest": "^26.5.6",
+    "ts-prepublish": "^1.0.0",
     "typescript": "^4.2.4"
   },
   "files": [
